--- a/src/app/general/dialogs/atc/atc.component.html
+++ b/src/app/general/dialogs/atc/atc.component.html
@@ -1,49 +1,62 @@
 <p class="dialog-title">
-  <strong>{{ data.title }}</strong>
+  <strong>Add to Collection</strong>
 </p>
-<h6>Add to Collection</h6>
 <div mat-dialog-content>
-  <div class="parent">
-    <mat-progress-bar mode="indeterminate" *ngIf="isLoading"> </mat-progress-bar>
-    <div
-      class="existing-collections"
-      infiniteScroll
-      [infiniteScrollDistance]="2"
-      [infiniteScrollThrottle]="50"
-      (scrolled)="onScrollDown()"
-      [scrollWindow]="false"
-    >
-      <div class="collection" *ngFor="let collection of collections" (click)="addResourceToCollection(collection.id)" matRipple>
+  <div class="columns">
+    <div class="left">
+      <div class="parent">
         <div
-          class="image"
-          [ngStyle]="{ 'background-image': 'url(' + collection.image + ')' }"
-        ></div>
-
-        <p>
-          {{ collection.title }}
-          <span class="in-this-collection" *ngIf="currentCollectionName && currentCollectionName === collection.title">
-              In this collection
-          </span>
-        </p>
+          *ngIf="collections.length > 0"
+          class="existing-collections"
+          infiniteScroll
+          [infiniteScrollDistance]="2"
+          [infiniteScrollThrottle]="50"
+          (scrolled)="onScrollDown()"
+          [scrollWindow]="false"
+        >
+          <h6>Add to existing collections</h6>
+          <mat-progress-bar mode="indeterminate" *ngIf="isLoading"> </mat-progress-bar>
+          <div class="collection" *ngFor="let collection of collections" (click)="addResourceToCollection(collection.id)" matRipple>
+            <div
+              class="image"
+              [ngStyle]="{ 'background-image': 'url(' + collection.image.link + ')' }"
+            ></div>
+    
+            <p>
+              {{ collection.title }}
+              <span class="in-this-collection" *ngIf="currentCollectionName && currentCollectionName === collection.title">
+                  In this collection
+              </span>
+            </p>
+          </div>
+    
+          <p *ngIf="!isLoading && collections.length === 0" class="no-collection">
+            You haven't made a collection yet!
+          </p>
+        </div>
+    
+        <form [formGroup]="createCollectionForm">
+          <h6>Add to new collection</h6>
+          <mat-form-field appearance="outline">
+            <mat-label>Create new Collection</mat-label>
+            <input
+              matInput
+              placeholder="Collection name"
+              formControlName="collectionTitle"
+            />
+          </mat-form-field>
+        </form>
       </div>
+    </div>
 
-      <p *ngIf="!isLoading && collections.length === 0" class="no-collection">
-        You haven't made a collection yet!
-      </p>
+    <div class="right">
+      <img [src]="data.image">
+      <h4>{{ data.title }}</h4>
+      <p>{{ data.description }}</p>
     </div>
   </div>
-
-  <form [formGroup]="createCollectionForm">
-    <mat-form-field appearance="outline">
-      <mat-label>Create new Collection</mat-label>
-      <input
-        matInput
-        placeholder="Collection name"
-        formControlName="collectionTitle"
-      />
-    </mat-form-field>
-  </form>
 </div>
+
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Cancel</button>
   <button mat-button (click)="submitCreateCollectionForm()" cdkFocusInitial>
