--- a/src/app/general/dialogs/atc/atc.component.scss
+++ b/src/app/general/dialogs/atc/atc.component.scss
@@ -1,111 +1,158 @@
 .dialog-title {
   font-size: 16px;
   max-width: 400px;
-  margin-bottom: 15px;
+  margin-bottom: 35px;
   strong {
     font-family: "Montserrat", sans-serif;
   }
 }
 
 h6 {
-    margin-top: 0;
-    margin-bottom: 20px;
+  margin-top: 0;
+  margin-bottom: 10px;
 }
 
 mat-form-field {
   width: 100% !important;
 }
 
-.parent {
-  height: 100%;
-  overflow: hidden;
+.columns {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 15px;
+  .left {
+    .parent {
+      height: 100%;
+      overflow: hidden;
 
-  .existing-collections {
-    border-radius: 5px;
-    height: 225px;
-    max-height: 500px;
-    margin-bottom: 15px;
-    overflow: hidden;
-    transition: max-height 0.15s ease-in-out;
-
-    &:hover {
-      overflow-y: scroll;
-    }
-
-    // width
-    &::-webkit-scrollbar {
-      width: 5px;
-
-      &:hover {
-          width: 10px;
-      }
-    }
-
-    // Handle
-    &::-webkit-scrollbar-thumb {
-      border-radius: 5px;  
-      background: #FC800C;
-
-      &:hover {
-        background: rgb(175, 87, 5);
-      }
-    }
-
-    .collection {
-      border-radius: 5px;
-      cursor: pointer;
-      display: grid;
-      grid-template-columns: 50px 1fr;
-      grid-column-gap: 15px;
-      padding: 5px;
-      transition: background-color 0.2s ease-in-out;
-
-      &:hover {
-        background-color: rgba(0, 0, 0, 0.1);
+      h6 {
+        color: #a2a2a2;
+        font-size: 14px;
+        font-weight: 400;
       }
 
-      .image {
-        width: 50px;
-        height: 50px;
+      .existing-collections {
         border-radius: 5px;
-        background: #EFEFBB;  /* fallback for old browsers */
-        background: -webkit-linear-gradient(to right, #D4D3DD, #EFEFBB);  /* Chrome 10-25, Safari 5.1-6 */
-        background: linear-gradient(to right, #D4D3DD, #EFEFBB); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-        background-size: cover;
-        background-position: center center;
-      }
+        height: 225px;
+        max-height: 500px;
+        margin-bottom: 15px;
+        overflow: hidden;
+        transition: max-height 0.15s ease-in-out;
 
-      p {
-        align-self: center;
-        margin: 0;
+        &:hover {
+          overflow-y: scroll;
+        }
 
-        .in-this-collection {
-            background: #FDC830;  /* fallback for old browsers */
-            background: -webkit-linear-gradient(to right, #F37335, #FDC830);  /* Chrome 10-25, Safari 5.1-6 */
-            background: linear-gradient(to right, #F37335, #FDC830); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-            border-radius: 3px;
-            color: white;
-            padding: 3px 0 1px 6px;
-            display: block;
-            font-size: 12px;
-            font-family: 'Hind', sans-serif;
-            width: 90px;
+        // width
+        &::-webkit-scrollbar {
+          width: 5px;
+
+          &:hover {
+            width: 10px;
+          }
+        }
+
+        // Handle
+        &::-webkit-scrollbar-thumb {
+          border-radius: 5px;
+          background: #fc800c;
+
+          &:hover {
+            background: rgb(175, 87, 5);
+          }
+        }
+
+        .collection {
+          border-radius: 5px;
+          cursor: pointer;
+          display: grid;
+          grid-template-columns: 50px 1fr;
+          grid-column-gap: 15px;
+          padding: 5px;
+          transition: background-color 0.2s ease-in-out;
+
+          &:hover {
+            background-color: rgba(0, 0, 0, 0.1);
+          }
+
+          .image {
+            width: 50px;
+            height: 50px;
+            border-radius: 5px;
+            background: #efefbb; /* fallback for old browsers */
+            background: -webkit-linear-gradient(
+              to right,
+              #d4d3dd,
+              #efefbb
+            ); /* Chrome 10-25, Safari 5.1-6 */
+            background: linear-gradient(
+              to right,
+              #d4d3dd,
+              #efefbb
+            ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+            background-size: cover;
+            background-position: center center;
+          }
+
+          p {
+            align-self: center;
+            margin: 0;
+
+            .in-this-collection {
+              background: #fdc830; /* fallback for old browsers */
+              background: -webkit-linear-gradient(
+                to right,
+                #f37335,
+                #fdc830
+              ); /* Chrome 10-25, Safari 5.1-6 */
+              background: linear-gradient(
+                to right,
+                #f37335,
+                #fdc830
+              ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+              border-radius: 3px;
+              color: white;
+              padding: 3px 0 1px 6px;
+              display: block;
+              font-size: 12px;
+              font-family: "Hind", sans-serif;
+              width: 90px;
+            }
+          }
+        }
+
+        .loading {
+          display: grid;
+          justify-content: center;
+          align-content: center;
+          width: 100%;
+          height: 100px;
+        }
+
+        .no-collection {
+          display: grid;
+          font-size: 12px;
+          text-align: center;
         }
       }
     }
+  }
 
-    .loading {
-        display: grid;
-        justify-content: center;
-        align-content: center;
-        width: 100%;
-        height: 100px;
+  .right {
+    img {
+      display: block;
+      width: 100%;
     }
 
-    .no-collection {
-      display: grid;
-      font-size: 12px;
-      text-align: center;
+    p {
+      color: #3c3c3c;
+      line-height: 25px;
     }
+  }
+}
+
+.mat-form-field-appearance-outline {
+  .mat-form-field-outline {
+    box-shadow: none !important;
   }
 }
