--- a/src/app/general/dialogs/atc/atc.component.html
+++ b/src/app/general/dialogs/atc/atc.component.html
@@ -15,42 +15,82 @@
           [scrollWindow]="false"
         >
           <h6>Add to existing collections</h6>
-          <mat-progress-bar mode="indeterminate" *ngIf="isLoading"> </mat-progress-bar>
-          <div class="collection" *ngFor="let collection of collections" (click)="addResourceToCollection(collection.id)" matRipple>
+          <mat-progress-bar mode="indeterminate" *ngIf="isLoading">
+          </mat-progress-bar>
+          <div
+            class="collection"
+            *ngFor="let collection of collections"
+            (click)="addResourceToCollection(collection.id)"
+            matRipple
+          >
             <div
               class="image"
-              [ngStyle]="{ 'background-image': 'url(' + collection.image.link + ')' }"
+              [ngStyle]="{
+                'background-image': 'url(' + collection.image.link + ')'
+              }"
             ></div>
-    
+
             <p>
               {{ collection.title }}
-              <span class="in-this-collection" *ngIf="currentCollectionName && currentCollectionName === collection.title">
-                  In this collection
+              <span
+                class="in-this-collection"
+                *ngIf="
+                  currentCollectionName &&
+                  currentCollectionName === collection.title
+                "
+              >
+                In this collection
               </span>
             </p>
           </div>
-    
-          <p *ngIf="!isLoading && collections.length === 0" class="no-collection">
+
+          <p
+            *ngIf="!isLoading && collections.length === 0"
+            class="no-collection"
+          >
             You haven't made a collection yet!
           </p>
         </div>
-    
+
         <form [formGroup]="createCollectionForm">
           <h6>Add to new collection</h6>
-          <mat-form-field appearance="outline">
-            <mat-label>Create new Collection</mat-label>
-            <input
-              matInput
-              placeholder="Collection name"
-              formControlName="collectionTitle"
-            />
-          </mat-form-field>
+          <div class="custom-input">
+            <div class="label-container">
+              <label>Collection Name</label>
+            </div>
+            <div class="input-container">
+              <input
+                type="text"
+                formControlName="collectionTitle"
+                placeholder="Name your collection"
+              />
+            </div>
+          </div>
+
+          <div class="custom-input">
+            <div class="label-container">
+              <label>Collection Note</label>
+            </div>
+            <div class="input-container">
+              <textarea
+                cdkTextareaAutosize
+                #autosize="cdkTextareaAutosize"
+                cdkAutosizeMinRows="3"
+                cdkAutosizeMaxRows="5"
+                type="text"
+                formControlName="collectionNote"
+                placeholder="Add note for this post..."
+              ></textarea>
+            </div>
+          </div>
         </form>
       </div>
     </div>
 
-    <div class="right">
-      <img [src]="data.image">
+    <div class="divider" *ngIf="!isMobileViewport"></div>
+
+    <div class="right" *ngIf="!isMobileViewport">
+      <img [src]="data.image" />
       <h4>{{ data.title }}</h4>
       <p>{{ data.description }}</p>
     </div>
@@ -58,8 +98,8 @@
 </div>
 
 <div mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">Cancel</button>
-  <button mat-button (click)="submitCreateCollectionForm()" cdkFocusInitial>
-    Ok
+  <button mat-stroked-button (click)="onNoClick()">Cancel</button>
+  <button mat-flat-button color="primary" (click)="submitCreateCollectionForm()" cdkFocusInitial>
+    Save
   </button>
 </div>
