minor fix to collection component

--- a/src/app/general/dialogs/atc/atc.component.html
+++ b/src/app/general/dialogs/atc/atc.component.html
@@ -78,7 +78,7 @@
                 cdkAutosizeMinRows="3"
                 cdkAutosizeMaxRows="5"
                 type="text"
-                formControlName="collectionNote"
+                formControlName="description"
                 placeholder="Add note for this post..."
               ></textarea>
             </div>
