--- a/src/app/general/collection/collection.component.html
+++ b/src/app/general/collection/collection.component.html
@@ -1,16 +1,20 @@
-<div class="collection-container" (click)="goToCollection()" *ngIf="!isLoading">
-  <div class="collection">
+<div class="collection-container" *ngIf="!isLoading" #origin>
+  <div class="header">
+    <div class="title-and-count">
+      <p class="collection-name">{{ data.title | truncate:[17] }}</p>
+      <div class="no-of-resources">
+        <small>{{ data.resources.length }} {{ data.resources.length >= 0 ? 'resource' : 'resources'}}</small>
+      </div>
+    </div>
+    <button mat-icon-button (click)="show(origin)">
+      <fa-icon [icon]="faEllipsesV"></fa-icon>
+    </button>
+  </div>
+  <div class="collection" (click)="goToCollection()">
     <div class="block" [ngStyle]="{'background-image': 'url('+ image1 +')'}"></div>
     <div class="block" [ngStyle]="{'background-image': 'url('+ image2 +')'}"></div>
     <div class="block" [ngStyle]="{'background-image': 'url('+ image3 +')'}"></div>
     <div class="block" [ngStyle]="{'background-image': 'url('+ image4 +')'}"></div>
-  </div>
-
-  <div class="bottom-section">
-    <p class="collection-name">{{ data.title | truncate:[17] }}</p>
-    <p class="no-of-resources">
-      <small>{{ data.resources.length }} {{ data.resources.length >= 0 ? 'resource' : 'resources'}}</small>
-    </p>
   </div>
 </div>
 
