added filter popup

--- a/src/app/components/popover/popover.component.html
+++ b/src/app/components/popover/popover.component.html
@@ -1,4 +1,4 @@
-<div class="popover" [@EnterLeave]="'flyIn'">
+<div class="popover" [ngClass]="positionClass" [@EnterLeave]="'flyIn'">
   <ng-container [ngSwitch]="renderMethod">
     <div *ngSwitchCase="'text'" [innerHTML]="content"></div>
     <ng-container *ngSwitchCase="'template'">
