--- a/src/app/components/popover/popover.component.scss
+++ b/src/app/components/popover/popover.component.scss
@@ -2,7 +2,14 @@
     background-color: white;
     box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
+    width: 250px;
+}
+
+.position-horizontal {
     margin-left: 5px;
     margin-right: 5px;
-    width: 250px;
+}
+
+.position-vertical {
+    margin-top: 5px;
 }
