--- a/src/app/general/post/comment/comment.component.scss
+++ b/src/app/general/post/comment/comment.component.scss
@@ -1,39 +1,52 @@
 .all-comments {
-    border-top: 1px solid rgba(0, 0, 0, 0.1);
-    margin-top: 10px;
-    padding: 15px 15px 0 15px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  margin-top: 10px;
+  padding: 15px 15px 0 15px;
 
-    .comment {
-        font-size: 14px;
-        margin-bottom: 15px;
-
-        .username {
-            margin-right: 5px;
-        }
-
-        .text {
-            margin-bottom: 0;
-        }
-
-        .comment-timestamp {
-            display: block;
-            margin-top: 2px;
-            font-size: 12px;
-        }
+  .comment {
+    display: grid;
+    grid-template-columns: 50px auto;
+    grid-gap: 15px;
+    .image {
+      align-self: center;  
+      border-radius: 50%;
+      width: 50px;
+      height: 50px;
+      background-color: lightgrey;
     }
+
+    .text {
+      font-size: 14px;
+      margin-bottom: 15px;
+
+      .username {
+        margin-right: 5px;
+      }
+
+      .text {
+        margin-bottom: 0;
+      }
+
+      .comment-timestamp {
+        display: block;
+        margin-top: 2px;
+        font-size: 12px;
+      }
+    }
+  }
 }
 
 .see-more {
-    cursor: pointer;
-    font-size: 12px;
-    font-weight: bold;
-    text-align: center;
-    margin: 0 0 15px 0;
+  cursor: pointer;
+  font-size: 12px;
+  font-weight: bold;
+  text-align: center;
+  margin: 0 0 15px 0;
 }
 
 .spinner {
-    display: grid;
-    justify-content: center;
-    align-content: center;
-    margin: 20px 0;
+  display: grid;
+  justify-content: center;
+  align-content: center;
+  margin: 20px 0;
 }
