wip comment component

--- a/src/app/general/post/post.component.html
+++ b/src/app/general/post/post.component.html
@@ -80,7 +80,7 @@
     </button>
   </div>
 
-  <app-comment *ngIf="showComments" [resourceId]="id" [image]="smImage"></app-comment>
+  <app-comment *ngIf="showComments" [resourceId]="id" [image]="userImage"></app-comment>
 
   <!-- * Add Comment -->
   <div class="add-comment">
