--- a/src/app/general/post/comment/comment.component.html
+++ b/src/app/general/post/comment/comment.component.html
@@ -1,15 +1,16 @@
 <!-- * All Comments -->
 <div class="all-comments" *ngIf="allComments.length > 0">
   <div class="comment" *ngFor="let comment of allComments">
-    <div class="image" [ngStyle]="{ 'background-image': 'url(' + image + ')' }"></div>
-    <div class="text">
-      <span class="username"
-        ><strong>{{ comment.username }}</strong></span
-      >
-      <span class="text">{{ comment.content }}</span>
+    <div class="image-container" [ngStyle]="{ 'background-image': 'url(' + image + ')' }"></div>
+    <div class="text-container">
+      <p class="username"
+        ><strong>{{ comment.username }}</strong>
+      </p>
       <small class="comment-timestamp">{{
         formatTime(comment.timestamp)
       }}</small>
+
+      <p class="comment-text">{{ comment.content }}</p>
     </div>
   </div>
 </div>
