--- a/src/app/general/post/comment/comment.component.scss
+++ b/src/app/general/post/comment/comment.component.scss
@@ -7,30 +7,33 @@
     display: grid;
     grid-template-columns: 50px auto;
     grid-gap: 15px;
-    .image {
-      align-self: center;  
+    margin-bottom: 15px;
+    .image-container {
       border-radius: 50%;
-      width: 50px;
-      height: 50px;
+      width: 35px;
+      height: 35px;
+      justify-self: center;
       background-color: lightgrey;
+      background-size: cover;
+      background-position: center center;
     }
 
-    .text {
-      font-size: 14px;
-      margin-bottom: 15px;
-
+    .text-container {
       .username {
-        margin-right: 5px;
-      }
-
-      .text {
+        font-size: 14px;
+        margin-top: 0;
         margin-bottom: 0;
       }
 
       .comment-timestamp {
-        display: block;
-        margin-top: 2px;
+        color: #A2A2A2;
+        font-size: 10px;
+        margin-bottom: 0;
+      }
+
+      .comment-text {
         font-size: 12px;
+        margin-bottom: 0;
       }
     }
   }
