--- a/src/app/general/dialogs/atc/atc.component.scss
+++ b/src/app/general/dialogs/atc/atc.component.scss
@@ -28,7 +28,7 @@ mat-form-field {
       overflow: hidden;
 
       h6 {
-        color: #a2a2a2;
+        color: #7e7e7e;
         font-size: 14px;
         font-weight: 400;
       }
