--- a/src/app/components/profile-summary/profile-summary.component.html
+++ b/src/app/components/profile-summary/profile-summary.component.html
@@ -1,1 +1,34 @@
-<p>profile-summary works!</p>
+<div class="summary-parent">
+    <div class="columns">
+        <div class="image"></div>
+        <div class="name-bio">
+            <h4>Name</h4>
+            <p>This is a description</p>
+        </div>
+    </div>
+
+    <div class="boxes">
+        <div class="box articles">
+            <h3>1</h3>
+            <span>Articles</span>
+        </div>
+
+        <div class="box posts">
+            <h3>2</h3>
+            <span>Posts</span>
+        </div>
+
+        <div class="box following">
+            <h3>3</h3>
+            <span>Following</span>
+        </div>
+    </div>
+
+    <div class="followers">
+        <h4>Followers</h4>
+    </div>
+
+    <div class="interests">
+        <h4>Interests</h4>
+    </div>
+</div>
