--- a/src/app/components/profile-summary/profile-summary.component.html
+++ b/src/app/components/profile-summary/profile-summary.component.html
@@ -1,6 +1,6 @@
 <div class="summary-parent">
     <div class="columns">
-        <div class="image"></div>
+        <div class="image" [ngStyle]="{ 'background-image': 'url(' + profileImage + ')' }"></div>
         <div class="name-bio">
             <h4>Name</h4>
             <p>This is a description</p>
@@ -9,26 +9,34 @@
 
     <div class="boxes">
         <div class="box articles">
-            <h3>1</h3>
-            <span>Articles</span>
+            <div>
+                <h3>1</h3>
+                <span>Articles</span>
+            </div>
         </div>
 
         <div class="box posts">
-            <h3>2</h3>
-            <span>Posts</span>
+            <div>
+                <h3>2</h3>
+                <span>Posts</span>
+            </div>
         </div>
 
         <div class="box following">
-            <h3>3</h3>
-            <span>Following</span>
+            <div>
+                <h3>3</h3>
+                <span>Following</span>
+            </div>
         </div>
     </div>
 
     <div class="followers">
         <h4>Followers</h4>
+        <p>No one's following you.</p>
     </div>
 
     <div class="interests">
         <h4>Interests</h4>
+        <p>You haven't set any interests.</p>
     </div>
 </div>
