--- a/src/app/pages/manage/manage.component.html
+++ b/src/app/pages/manage/manage.component.html
@@ -62,7 +62,7 @@
 </div>
 
 <div class="columns">
-  <app-profile-summary [profileImage]="profileImage"></app-profile-summary>
+  <app-profile-summary [username]="username"></app-profile-summary>
   <div>
     <app-manage-resources *ngIf="form.get('posts').value"></app-manage-resources>
 
