--- a/src/app/components/profile-summary/profile-summary.component.scss
+++ b/src/app/components/profile-summary/profile-summary.component.scss
@@ -72,6 +72,7 @@
             grid-gap: -15px;
 
             .follower-image {
+                background-color: lightgrey;
                 width: 23px;
                 height: 23px;
                 border-radius: 50%;
