--- a/src/assets/styles/section-container.scss
+++ b/src/assets/styles/section-container.scss
@@ -18,7 +18,7 @@
             margin-top: 25px;
 
             .image-container {
-                background-size: 80px;
+                background-size: cover;
                 background-repeat: no-repeat;
                 background-position: center center;
                 border: 3px solid white;
