--- a/src/app/components/profile-summary/profile-summary.component.html
+++ b/src/app/components/profile-summary/profile-summary.component.html
@@ -5,8 +5,8 @@
       [ngStyle]="{ 'background-image': 'url(' + profileImage + ')' }"
     ></div>
     <div class="name-bio">
-      <h4>{{ name }}</h4>
-      <p>{{ bio }}</p>
+      <h4>{{ firstName }} {{ lastName }}</h4>
+      <p [ngClass]="{ 'greyed-out': !bio }">{{ bio ? bio : "No bio added" }}</p>
     </div>
   </div>
 
