--- a/src/app/components/profile-summary/profile-summary.component.html
+++ b/src/app/components/profile-summary/profile-summary.component.html
@@ -27,7 +27,7 @@
 
     <div class="box following">
       <div>
-        <h3>{{ followersCount }}</h3>
+        <h3>{{ followingCount - 1 }}</h3>
         <span>Following</span>
       </div>
     </div>
@@ -35,21 +35,26 @@
 
   <div class="followers">
     <h4>Followers</h4>
-    <p *ngIf="followersCount === 0">Add posts and articles to get followers</p>
-    <div *ngIf="followersCount > 0" class="follower-images-array">
+    <p *ngIf="followerCount === 0">Add posts and articles to get followers</p>
+    <div *ngIf="followerCount > 0" class="follower-images-array">
       <div
         *ngFor="let follower of followers"
         class="follower-image"
         [ngStyle]="{ 'background-image': 'url(' + follower.smImage.link + ')' }"
       ></div>
-      <div *ngIf="followersCount > 4" class="remaining-followers">
-          +{{ followersCount - 4 }}
+      <div *ngIf="followerCount > 4" class="remaining-followers">
+          +{{ followerCount - 4 }}
       </div>
     </div>
   </div>
 
   <div class="interests">
     <h4>Interests</h4>
-    <p>You haven't set any interests.</p>
+    <p *ngIf="interests.length === 0">You haven't set any interests.</p>
+    <div class="list-of-interests" *ngIf="interests">
+      <p *ngFor="let interest of interests">
+        {{ interest }}
+      </p>
+    </div>
   </div>
 </div>
