--- a/src/app/components/profile-summary/profile-summary.component.html
+++ b/src/app/components/profile-summary/profile-summary.component.html
@@ -37,13 +37,13 @@
     <h4>Followers</h4>
     <p *ngIf="followerCount === 0">Add posts and articles to get followers</p>
     <div *ngIf="followerCount > 0" class="follower-images-array">
-      <div
+      <app-user-image
         *ngFor="let follower of followers"
-        class="follower-image"
-        [ngStyle]="{ 'background-image': 'url(' + follower.smImage.link + ')' }"
-      ></div>
+        [data]="follower"
+        size="sm"
+      ></app-user-image>
       <div *ngIf="followerCount > 4" class="remaining-followers">
-          +{{ followerCount - 4 }}
+        +{{ followerCount - 4 }}
       </div>
     </div>
   </div>
