--- a/src/app/components/user-image/user-image.component.scss
+++ b/src/app/components/user-image/user-image.component.scss
@@ -1,9 +1,35 @@
 .image {
-  width: 35px;
-  height: 35px;
+  display: grid;
   border-radius: 50%;
   border: 2px solid white;
+  background-color: aliceblue;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+
+  span {
+    align-self: center;
+    justify-self: center;
+    font-size: 150%;
+    z-index: -1;
+  }
+}
+
+.xs {
+  width: 35px;
+  height: 35px;
+}
+
+.sm {
+  width: 40px;
+  height: 40px;
+}
+
+.md {
+  width: 75px;
+  height: 75px;
+}
+
+.clickable {
+  cursor: pointer;
 }
