fixed user image component

--- a/src/app/components/user-image/user-image.component.html
+++ b/src/app/components/user-image/user-image.component.html
@@ -4,7 +4,7 @@
   [ngClass]="[imageSizeClass, clickableClass]"
   [ngStyle]="url"
 >
-  <span *ngIf="!image">
+  <span *ngIf="image === null">
     {{ placeholder }}
   </span>
 </div>
