--- a/src/app/general/post/post.component.html
+++ b/src/app/general/post/post.component.html
@@ -7,7 +7,7 @@
       [ngStyle]="{ 'background-image': 'url(' + userImage + ')' }"
     ></div> -->
     <app-user-image
-      [image]="userImage"
+      [image]="userImage[0]"
       [firstName]="firstName[0]"
       [lastName]="lastName[0]"
       [username]="username"
