--- a/src/app/components/user-image/user-image.component.scss
+++ b/src/app/components/user-image/user-image.component.scss
@@ -8,10 +8,10 @@
   background-repeat: no-repeat;
 
   span {
+    color: #4a4a4a;
     align-self: center;
     justify-self: center;
     font-size: 150%;
-    z-index: -1;
   }
 }
 
