--- a/src/app/general/dialogs/atc/atc.component.scss
+++ b/src/app/general/dialogs/atc/atc.component.scss
@@ -103,17 +103,7 @@ mat-form-field {
             margin: 0;
 
             .in-this-collection {
-              background: #fdc830; /* fallback for old browsers */
-              background: -webkit-linear-gradient(
-                to right,
-                #f37335,
-                #fdc830
-              ); /* Chrome 10-25, Safari 5.1-6 */
-              background: linear-gradient(
-                to right,
-                #f37335,
-                #fdc830
-              ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+              background: #ffac15;
               border-radius: 3px;
               color: white;
               padding: 3px 0 1px 6px;
